# Kairos

./: .gitignore  AGENTS.md  ANALYSE_BUGS.md  ANALYSE_CHAT_KAIROS.md  CLAUDE.md  PLAN.MD  PLAN.MD.bak  PLAN_PRE_BETA.md  PRESENTATION_NOTES.md  README.md  SHOPIFY_PIPELINE_BUG_REPORT.md  demo_michael_boutique.csv  final.docx  kairos.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-costs.csv  test_graphiques_complet.csv  test_import_clients.csv  test_nouveaux_clients.csv
Kairos-backend/: .gitignore  README.md  index.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
Kairos-backend/docs/: test2.md
Kairos-backend/kairos-shopify-engine/: requirements.txt
Kairos-backend/prisma/: schema.prisma  seedShopifyTestData.ts  seeds.ts
Kairos-backend/python-extractor/: requirements.txt
Kairos-backend/scripts/: migrate-tokens.test.ts  migrate-tokens.ts
Kairos-backend/src/: app.ts  index.ts  test-import.csv
KairosSummarySaves/docx/: 003_-_Final_Oral_Presentation (2)__summary__2025-07-26_11-44-04.txt
KairosSummarySaves/pdf/: Apologies__summary__2025-07-26_11-48-53.txt  fiches_revision_exam_final_UTF8__summary__2025-07-26_11-35-10.txt
core/: document_handler.py  kairos_assistant.py
docs/: shopify-protected-data.md
docs/ai-memory/: CURRENT_STATE.md
docs/business-intelligence/: AI_STRATEGY.md  BUSINESS_INTELLIGENCE_ROADMAP.md  CODEBASE_PHASE1_AUDIT.md  (+9 more)
kairos-frontend/: PRE_BETA_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: import_kairos_phase1_tickets.py
(+210 files in other folders)
